supplier-panel/k8s/supplier-panel-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: supplier
    namespace: supplier
    labels:
        app: supplier
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 3000
    selector:
        app: supplier
        tier: frontend
