supplier-panel/k8s/supplier-panel-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: supplier-ssl-ingress
    namespace: supplier
    annotations:
        kubernetes.io/ingress.global-static-ip-name: supplier-ssl-ingress-ip
        networking.gke.io/managed-certificates: supplier-ssl-certificate
        networking.gke.io/v1beta1.FrontendConfig: "supplier-frontend-config"
        #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        #kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "240s"
        ingress.kubernetes.io/proxy-connect-timeout: "240s"
        ingress.kubernetes.io/proxy-send-timeout: "240s"
        ingress.kubernetes.io/proxy-read-timeout: "240s"
spec:
    rules:
        - host: supplier.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: supplier
                        servicePort: 3000
